wrkd w/ css more

--- a/index.html
+++ b/index.html
@@ -90,9 +90,17 @@
 	</head>
 	<body>
     <header>
-      <h1>GeeMail</h1>
+      <h1><image src='http://screenshot.it.sftcdn.net/it/scrn/79000/79070/geemail-8.jpg'></image></br>GeeMail</h1>
     </header>
-      <h3>Inbox <span id='total'></span></h3>
+         <div>
+        <ul class='inBox'>
+          <li><button type="button" id='compose'>Compose</button></li></br></br>
+          <li>Inbox (<span id='count'></span>)</li></br></br>
+          <li>Important</li></br></br>
+          <li>Sent</li></br></br>
+          <li>Trash</li></br>
+        </ul>
+      </div>
   		<div class="container" id="main">
   	        
   		</div>
