jk. THIS fix's increments

--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
                 console.log(this);//print 'this' (loadInbox(loadMe)) in console
             
               inboxTotal += 1; //this will start increment at 1 not 0!
-             var total = inboxTotal++;//increment inboxTotal with var 'total'
-                 count.innerHTML = total;//
+             count.innerHTML = inboxTotal;//
            
          }, 5000); //load new message every # second in # millisecond
 
